# easyrpg-player

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.am  configure.ac  dist.sh  meson.build
bench/: switches.cpp  variables.cpp
builds/android/: .gitignore
builds/android/app/: build.gradle
builds/android/app/src/main/java/org/easyrpg/player/player/: EasyRpgPlayerActivity.java
builds/android/app/src/main/jni/SDL2/: Android.mk
builds/android/app/src/main/jni/gamebrowser/: Android.mk
builds/android/app/src/main/jni/src/: Android.mk  org_easyrpg_player_player_EasyRpgPlayerActivity.cpp  org_easyrpg_player_player_EasyRpgPlayerActivity.h
builds/android/app/src/main/res/menu/: player.xml
builds/android/app/src/main/res/values/: strings.xml
builds/android/gradle/wrapper/: gradle-wrapper.properties
builds/android/jni/src/: org_easyrpg_player_player_EasyRpgPlayerActivity.cpp
builds/psp/: .gitignore  Makefile
src/: algo.cpp  algo.h  attribute.cpp  attribute.h  audio.cpp  audio.h  audio_generic_midiout.cpp  audio_psp.cpp  audio_psp.h  audio_secache.cpp  audio_secache.h  autobattle.cpp  autobattle.h  background.cpp  baseui.cpp  baseui.h  battle_animation.cpp  battle_animation.h  battle_message.cpp  cache.cpp  drawable.cpp  drawable.h  dynrpg_easyrpg.cpp  dynrpg_easyrpg.h  dynrpg_textplugin.cpp  dynrpg_textplugin.h  enemyai.cpp  enemyai.h  filefinder.cpp  font.cpp  fps_overlay.cpp  fps_overlay.h  game_config.cpp  game_message.cpp  game_message.h  graphics.cpp  graphics.h  input.cpp  input.h  input_buttons_desktop.cpp  (+40 more)
src/engine/: actor.cpp  actor.h  actors.cpp  actors.h  battle.cpp  battle.h  battlealgorithm.cpp  battlealgorithm.h  battler.cpp  character.cpp  character.h  clock.cpp  commonevent.cpp  commonevent.h  config.cpp  config_game.cpp  destiny.cpp  dynrpg.cpp  enemy.cpp  enemy.h  enemyparty.cpp  enemyparty.h  event.cpp  event.h  hero.cpp  hero.h  ineluki.cpp  interpreter.cpp  interpreter.h  interpreter_battle.cpp  interpreter_battle.h  interpreter_control_variables.cpp  interpreter_map.cpp  interpreter_map.h  interpreter_shared.cpp  map.cpp  map.h  message.cpp  message.h  party.cpp  (+19 more)
src/platform/3ds/: audio.cpp  audio.h  input_buttons.cpp
src/platform/android/: org_easyrpg_player_player_EasyRpgPlayerActivity.cpp
src/platform/custom/: audio.cpp  audio.h  input_buttons.cpp  main.cpp  ui.cpp  ui.h
src/platform/emscripten/: interface.cpp
src/platform/generic/: ao_audio.cpp  ao_audio.h
src/platform/libretro/: audio.cpp  input_buttons.cpp
src/platform/psp/: psp_input_buttons.cpp
src/platform/psvita/: input_buttons.cpp  ui.cpp
src/platform/sdl/: audio.cpp  main.cpp  sdl2_ui.cpp  sdl3_ui.cpp  sdl_ui.cpp  sdl_ui.h
src/platform/switch/: audio.cpp  audio.h  input_buttons.cpp
src/platform/wii/: audio.cpp  audio.h  audio_generic.cpp  audio_generic.h  bsod.cpp  bsod.h  buttons.h  exceptionhandler.S  input_buttons.cpp  main.cpp  ui.cpp  ui.h
src/platform/wiiu/: input_buttons.cpp
src/scenes/: actortarget.cpp  actortarget.h  battle.cpp  battle.h  battle_rpg2k.cpp  battle_rpg2k.h  battle_rpg2k3.cpp  battle_rpg2k3.h  debug.cpp  debug.h  end.cpp  end.h  equip.cpp  equip.h  file.cpp  file.h  gamebrowser.cpp  gamebrowser.h  gameover.cpp  import.cpp  import.h  item.cpp  item.h  language.cpp  language.h  load.cpp  load.h  logo.cpp  map.cpp  map.h  menu.cpp  menu.h  name.cpp  name.h  order.cpp  order.h  save.cpp  save.h  settings.cpp  settings.h  (+10 more)
src/windows/: about.cpp  about.h  actorinfo.cpp  actorinfo.h  actorsp.cpp  actorsp.h  actorstatus.cpp  actorstatus.h  actortarget.cpp  actortarget.h  base.cpp  base.h  battlemessage.cpp  battlemessage.h  battlestatus.cpp  battlestatus.h  command.cpp  command.h  command_horizontal.cpp  command_horizontal.h  equip.cpp  equip.h  equipitem.cpp  equipitem.h  equipstatus.cpp  equipstatus.h  face.cpp  face.h  gamelist.cpp  gamelist.h  gold.cpp  gold.h  help.cpp  help.h  import_progress.cpp  import_progress.h  input_settings.cpp  input_settings.h  interpreter.cpp  interpreter.h  (+44 more)
tests/: dynrpg.cpp  enemyai.cpp  game_battlealgorithm.cpp  game_character.cpp  game_character_anim.cpp  game_character_flash.cpp  game_character_move.cpp  game_character_moveto.cpp  game_destiny.cpp  game_event.cpp  game_player_input.cpp  game_player_pan.cpp  game_player_savecount.cpp  mock_game.cpp  mock_game.h  move_route.cpp  parse.cpp  switches.cpp  test_mock_actor.h  test_move_route.h  variables.cpp  wordwrap.cpp
