project('EasyRPG Player', 'cpp',
	default_options : ['cpp_std=c++14'],
	version: '0.7')
sdl2 = dependency('sdl2')
lcf = dependency('liblcf')
fmt = dependency('fmt')
pixman = dependency('pixman-1')
speexdsp = dependency('speexdsp')
png = dependency('libpng')

executable('easyrpg-player',
	include_directories : include_directories(['src']),
	cpp_args : [
		'-DUSE_SDL=2',
		'-DHAVE_LIBSPEEXDSP',
		'-w'
	],
	sources : [
		'src/algo.cpp',
		'src/async_handler.cpp',
		'src/attribute.cpp',
		'src/audio.cpp',
		'src/audio_decoder_base.cpp',
		'src/audio_decoder.cpp',
		'src/audio_decoder_midi.cpp',
		'src/audio_generic.cpp',
		'src/audio_generic_midiout.cpp',
		'src/audio_midi.cpp',
		'src/audio_resampler.cpp',
		'src/audio_sdl.cpp',
		'src/audio_secache.cpp',
		'src/autobattle.cpp',
		'src/background.cpp',
		'src/baseui.cpp',
		'src/battle_animation.cpp',
		'src/battle_message.cpp',
		'src/bitmap.cpp',
		'src/cache.cpp',
		'src/cmdline_parser.cpp',
		'src/decoder_drwav.cpp',
		'src/decoder_fluidsynth.cpp',
		'src/decoder_fmmidi.cpp',
		'src/decoder_libsndfile.cpp',
		'src/decoder_mpg123.cpp',
		'src/decoder_oggvorbis.cpp',
		'src/decoder_opus.cpp',
		'src/decoder_wildmidi.cpp',
		'src/decoder_xmp.cpp',
		'src/directory_tree.cpp',
		'src/drawable.cpp',
		'src/drawable_list.cpp',
		'src/drawable_mgr.cpp',
		'src/dynrpg.cpp',
		'src/dynrpg_easyrpg.cpp',
		'src/enemyai.cpp',
		'src/exe_reader.cpp',
		'src/feature.cpp',
		'src/fileext_guesser.cpp',
		'src/filefinder.cpp',
		'src/filefinder_rtp.cpp',
		'src/filesystem.cpp',
		'src/filesystem_native.cpp',
		'src/filesystem_root.cpp',
		'src/filesystem_stream.cpp',
		'src/filesystem_zip.cpp',
		'src/font.cpp',
		'src/fps_overlay.cpp',
		'src/frame.cpp',
		'src/game_actor.cpp',
		'src/game_actors.cpp',
		'src/game_battlealgorithm.cpp',
		'src/game_battle.cpp',
		'src/game_battler.cpp',
		'src/game_character.cpp',
		'src/game_clock.cpp',
		'src/game_commonevent.cpp',
		'src/game_config.cpp',
		'src/game_enemy.cpp',
		'src/game_enemyparty.cpp',
		'src/game_event.cpp',
		'src/game_ineluki.cpp',
		'src/game_interpreter_battle.cpp',
		'src/game_interpreter.cpp',
		'src/game_interpreter_map.cpp',
		'src/game_map.cpp',
		'src/game_message.cpp',
		'src/game_party_base.cpp',
		'src/game_party.cpp',
		'src/game_pictures.cpp',
		'src/game_player.cpp',
		'src/game_quit.cpp',
		'src/game_screen.cpp',
		'src/game_switches.cpp',
		'src/game_system.cpp',
		'src/game_targets.cpp',
		'src/game_variables.cpp',
		'src/game_vehicle.cpp',
		'src/graphics.cpp',
		'src/hslrgb.cpp',
		'src/image_bmp.cpp',
		'src/image_png.cpp',
		'src/image_xyz.cpp',
		'src/input_buttons_desktop.cpp',
		'src/input.cpp',
		'src/input_source.cpp',
		'src/instrumentation.cpp',
		'src/lcf_data.cpp',
		'src/main.cpp',
		'src/main_data.cpp',
		'src/message_overlay.cpp',
		'src/meta.cpp',
		'src/midisequencer.cpp',
		'src/midisynth.cpp',
		'src/output.cpp',
		'src/pending_message.cpp',
		'src/plane.cpp',
		'src/platform.cpp',
		'src/player.cpp',
		'src/rand.cpp',
		'src/rect.cpp',
		'src/registry.cpp',
		'src/registry_wine.cpp',
		'src/rtp.cpp',
		'src/rtp_table.cpp',
		'src/scene_actortarget.cpp',
		'src/scene_battle.cpp',
		'src/scene_battle_rpg2k3.cpp',
		'src/scene_battle_rpg2k.cpp',
		'src/scene.cpp',
		'src/scene_debug.cpp',
		'src/scene_end.cpp',
		'src/scene_equip.cpp',
		'src/scene_file.cpp',
		'src/scene_gamebrowser.cpp',
		'src/scene_gameover.cpp',
		'src/scene_import.cpp',
		'src/scene_item.cpp',
		'src/scene_load.cpp',
		'src/scene_logo.cpp',
		'src/scene_map.cpp',
		'src/scene_menu.cpp',
		'src/scene_name.cpp',
		'src/scene_order.cpp',
		'src/scene_save.cpp',
		'src/scene_shop.cpp',
		'src/scene_skill.cpp',
		'src/scene_status.cpp',
		'src/scene_teleport.cpp',
		'src/scene_title.cpp',
		'src/screen.cpp',
		'src/sdl2_ui.cpp',
		'src/sprite_actor.cpp',
		'src/sprite_airshipshadow.cpp',
		'src/sprite_battler.cpp',
		'src/sprite_character.cpp',
		'src/sprite.cpp',
		'src/sprite_enemy.cpp',
		'src/sprite_picture.cpp',
		'src/spriteset_battle.cpp',
		'src/spriteset_map.cpp',
		'src/sprite_timer.cpp',
		'src/sprite_weapon.cpp',
		'src/state.cpp',
		'src/text.cpp',
		'src/tilemap.cpp',
		'src/tilemap_layer.cpp',
		'src/transition.cpp',
		'src/translation.cpp',
		'src/utils.cpp',
		'src/weather.cpp',
		'src/window_about.cpp',
		'src/window_actorinfo.cpp',
		'src/window_actorsp.cpp',
		'src/window_actorstatus.cpp',
		'src/window_actortarget.cpp',
		'src/window_base.cpp',
		'src/window_battlecommand.cpp',
		'src/window_battlemessage.cpp',
		'src/window_battlestatus.cpp',
		'src/window_command.cpp',
		'src/window.cpp',
		'src/window_equip.cpp',
		'src/window_equipitem.cpp',
		'src/window_equipstatus.cpp',
		'src/window_face.cpp',
		'src/window_gamelist.cpp',
		'src/window_gold.cpp',
		'src/window_help.cpp',
		'src/window_import_progress.cpp',
		'src/window_item.cpp',
		'src/window_keyboard.cpp',
		'src/window_menustatus.cpp',
		'src/window_message.cpp',
		'src/window_name.cpp',
		'src/window_numberinput.cpp',
		'src/window_paramstatus.cpp',
		'src/window_savefile.cpp',
		'src/window_selectable.cpp',
		'src/window_shopbuy.cpp',
		'src/window_shop.cpp',
		'src/window_shopnumber.cpp',
		'src/window_shopparty.cpp',
		'src/window_shopsell.cpp',
		'src/window_shopstatus.cpp',
		'src/window_skill.cpp',
		'src/window_skillstatus.cpp',
		'src/window_targetstatus.cpp',
		'src/window_teleport.cpp',
		'src/window_varlist.cpp'
	 ],
	dependencies : [ sdl2, lcf, fmt, pixman, speexdsp, png ]
)
